2002-05-31  Jakub Steiner <jimmac@ximian.com>

	* icons/i-dvd.png: we can't use the DVD logo I was told. 
	* icons/gnome-text-abiword.png: don't use the app icon for abi
     files
	* icons/gnome-text-x-lyx.png: LyX files

Thu May 30 09:32:41 2002  George Lebl <jirka@5z.com>

	* gnome-vfs.keys.in: add x-directory/vfolder-desktop

2002-05-29  Jody Goldberg <jody@gnome.org>

	* gnome-vfs.keys.in : Add more categories.

2002-05-24  Alex Graveley  <alex@ximian.com>

	* gnome-vfs-mime-magic: Move audio/x-wav matchers above
	audio/x-riff, as wav files start with RIFF, and were being wrongly
	identified as audio/x-riff.

2002-05-23  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.mime:

	Add cls and sty extensions to TeX type (x-tex). Probably should be
	split into LaTex types post string freeze.
	
2002-05-20  Jaka Mocnik  <jaka@gnu.org>

	* gnome-vfs.keys.in: added GGV control component iids for
	application/postscript mime type. made component the default
	action type.

2002-05-20  Bastien Nocera  <hadess@hadess.net>

	* icons/Makefile.am:
	* icons/i-dvd.png: added a crummy home-made icon for DVDs

2002-05-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "mk" to ALL_LINGUAS.
	
2002-05-16  Bastien Nocera  <hadess@hadess.net>

	* icons/Makefile.am:
	* icons/i-cdrom-audio.png: add a dodgy home-made icon for Audio CDs

2002-05-13  Jacob Berkman  <jacob@ximian.com>

	* gnome-vfs-mime-magic: read more byts for svgs, as some have a
	comment before the <!DOCTYPE> tag which broke scalable gorilla

2002-05-06  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added gnome-audio-x-it.png as the icon for
	audio/x-it
	* icons/Makefile.am:
	* icons/gnome-audio-x-it.png: updated

2002-05-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: added magic for Impulse Tracker modules

2002-05-01  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Basque (eu) and Vietnamese (vi) to ALL_LINGUAS
